# backend/src/server/container.js
@@ -14,23 +14,28 @@ import {Roles} from '../config/roles.js';
 //Routes imports
 import {IndexRoute} from '../routes/indexRoute.js';
 import {UserRoutes} from '../routes/userRoutes.js';
-import {AuthRoutes} from '../routes/authRoutes.js'
+import {AuthRoutes} from '../routes/authRoutes.js';
+import {DocumentRoutes} from '../routes/documentRoutes.js';
 
 //Models imports
 import User from '../models/user.js';
+import Document from '../models/document.js';
 
 //Repositories imports
 import {BaseRepository} from '../repositories/baseRepository.js';
 import {UserRepository} from '../repositories/userRepository.js';
+import {DocumentRepository} from '../repositories/documentRepository.js';
 
 //Services
 import {BaseService} from '../services/baseService.js';
 import {UserService} from '../services/userService.js';
 import {AuthService} from '../services/authService.js';
+import {DocumentService} from '../services/documentService.js';
 
 //Controllers
 import {UserController} from '../controllers/userController.js';
 import {AuthController} from '../controllers/authController.js';
+import {DocumentController} from '../controllers/documentController.js';
 
 //Helpers
 import {JwtHelper} from '../helpers/jwtHelper.js';
@@ -53,31 +58,36 @@ container.register({
 container.register({
     IndexRoute: asClass(IndexRoute).singleton(),
     UserRoutes: asClass(UserRoutes).singleton(),
-    AuthRoutes: asClass(AuthRoutes).singleton()
+    AuthRoutes: asClass(AuthRoutes).singleton(),
+    DocumentRoutes: asClass(DocumentRoutes).singleton()
 });
 
 //Models registration
 container.register({
-    User: asValue(User)
+    User: asValue(User),
+    Document: asValue(Document)
 });
 
 //Repositories registration
 container.register({
     BaseRepository: asClass(BaseRepository).singleton(),
-    UserRepository: asClass(UserRepository).singleton()
+    UserRepository: asClass(UserRepository).singleton(),
+    DocumentRepository: asClass(DocumentRepository).singleton()
 });
 
 //Services registration
 container.register({
     BaseService: asClass(BaseService).singleton(),
     UserService: asClass(UserService).singleton(),
-    AuthService: asClass(AuthService).singleton()
+    AuthService: asClass(AuthService).singleton(),
+    DocumentService: asClass(DocumentService).singleton()
 });
 
 //Controllers registration
 container.register({
     UserController: asClass(UserController).singleton(),
-    AuthController: asClass(AuthController).singleton()
+    AuthController: asClass(AuthController).singleton(),
+    DocumentController: asClass(DocumentController).singleton()
 });
 
 //Helpers registration
